test/corpus/links.txt
=====================
Link with target only
=====================

[foo]

---

(document
  (text)
  (link
    (link_target))
  (text))

=========================
Link with target and text
=========================

[foo|bar]

---

(document
  (text)
  (link
    (link_target)
    (link_text))
  (text))
