test/corpus/verbatim.txt
==============
Empty verbatim
==============

<verbatim></verbatim>

---

(document
  (text)
  (verbatim
    (verbatim_start_tag)
    (verbatim_end_tag))
  (text))

===================================
Markup is ignored inside a verbatim
===================================

<verbatim>

[foo]

<title>foo</title>

</verbatim>

---

(document
  (text)
  (verbatim
    (verbatim_start_tag)
    (verbatim_content)
    (verbatim_end_tag))
  (text))

===============
Missing end tag
===============

<verbatim>

---

(document
  (text)
  (ERROR
    (verbatim_start_tag)))

=========================================
Verbatim scanning marks the end correctly
=========================================

<verbatim></verbatim>[foo]

---

(document
  (text)
  (verbatim
    (verbatim_start_tag)
    (verbatim_end_tag))
  (link
    (link_target))
  (text))

====================================================
Verbatim scanning waits for the whole of the end tag
====================================================

<verbatim>
</verbatim
<title>foo</title>
</verbatim>[foo]

---

(document
  (text)
  (verbatim
    (verbatim_start_tag)
    (verbatim_content)
    (verbatim_end_tag))
  (link
    (link_target))
  (text))
