test/corpus/wiki_markup.txt
==========
Paragraphs
==========

Paragraph one

Paragraph two

---

(document
  (text))

===========
Bullet list
===========

  *  Item one
  *  Item two

---

(document
  (text))

=================
Enumeration lists
=================

List with "#":

  #  Item one
  #  Item two

List with numbers:

  1.  Item one
  2.  Item two

---

(document
  (text))

===================
Indented Paragraphs
===================

  Paragraph one

  Paragraph two

---

(document
  (text))

=====================
Link with target only
=====================

[foo]

---

(document
  (text)
  (link
    (link_target))
  (text))

=========================
Link with target and text
=========================

[foo|bar]

---

(document
  (text)
  (link
    (link_target)
    (link_text))
  (text))
